# gamemode-gui

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  gamemode-manager.desktop  pyproject.toml  run_safe.py
packaging/: build-rpm.sh  gamemode-launch  gamemode-manager.spec
releases/: gamemode-manager-1.0.0.1-0.x86_64.rpm  gamemode-manager-1.1.0-0.x86_64.rpm
scripts/: llama-game-end  llama-game-start
src/: aihook.rs  app.rs  backend.rs  config.rs  gamemode_manager.py  heroic.rs  main.rs  steam.rs
